--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
    <div class ="container">
+    <div class="row zero">
+        <button>F1</button>
+        <button>F2</button>
+        <button>F3</button>
+        <button>F4</button>
+        <button>F5</button>
+        <button>F6</button>
+        <button>F7</button>
+        <button>F8</button>
+        <button>F9</button>
+        <button>F10</button>
+        <button>F11</button>
+        <button>F12</button>
+       
+    </div>
     <div class = "row one">
 <button>`</button>
 <button>1</button>
