--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <button>0</button>
 <button>-</button>
 <button>=</button>
-<button class="back">Backspace</button>
+<button class="backspace">Backspace</button>
     </div>
     <div class ="row two">
         <button class="tab">Tab</button>
@@ -86,12 +86,18 @@
         <button class="shift">SHIFT</button>
     </div>
     <div class="row five">
-        <button class="other">Ctrl</button>
-        <button class="other">Win</button>
-        <button class="other">Alt</button>
+        <button class="different">Ctrl</button>
+        <button class="different">Win</button>
+        <button class="different">Alt</button>
         <button class="space">Space</button>
-        <button class="other">Win</button>
-        <button class="other">Ctrl</button>
+        <button class="different">Win</button>
+        <button class="different">Ctrl</button>
+        <button class="leftarrow">&#x2190;</button>
+        <button class="uparrow">&#x2191;</button>
+        <button class="rightarrow">&#x2192;</button>
+    </div>
+    <div class="row six">
+        <button class="downarrow">&#x2193;</button>
     </div>
    </div>
 </body>
