--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button>P</button>
         <button>[</button>
         <button>]</button>
-        <button class="slace">\</button>
+        <button class="slash">\</button>
     </div>
     <div class ="row three">
         <button class="cap">CAPS</button>
