--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <button>F10</button>
         <button>F11</button>
         <button>F12</button>
-       
+        <button class="insert">Insert</button>
+        <button class="Delete">Delete</button>
+        <button class="Print">PrtScn</button>
+        <button id="top" class="scroll">Scroll Lock</button>
+        <button id="top" class="pause">Pause Break</button>
     </div>
     <div class = "row one">
 <button>`</button>
@@ -37,7 +41,10 @@
 <button>0</button>
 <button>-</button>
 <button>=</button>
-<button class="back">Backspace</button>
+<button class="backspace">Backspace</button>
+<button class="Ins">Insert</button>
+<button class="Home">Home</button>
+<button class="PageUp">Page Up</button>
     </div>
     <div class ="row two">
         <button class="tab">Tab</button>
@@ -53,7 +60,10 @@
         <button>P</button>
         <button>[</button>
         <button>]</button>
-        <button class="slace">\</button>   
+        <button class="slace">\</button>
+        <button class="DEL">DEL</button>
+        <button class="End">End</button>
+        <button class="PageDown">Page Down</button>
     </div>
     <div class ="row three">
         <button class="cap">CAPS</button>
@@ -85,13 +95,21 @@
         <button class="shift">SHIFT</button>
     </div>
     <div class="row five">
-        <button class="other">Ctrl</button>
-        <button class="other">Win</button>
-        <button class="other">Alt</button>
+        <button class="different">Ctrl</button>
+        <button class="different">Win</button>
+        <button class="different">Alt</button>
         <button class="space">Space</button>
-        <button class="other">Win</button>
-        <button class="other">Ctrl</button>
+        <button class="different">Alt</button>
+        <button class="different">FN</button>
+        <button class="different">Win</button>
+        <button class="secondc">Ctrl</button>
+        <button id="arrow" class="leftarrow">&#x2190;</button>
+        <button id="arrow" class="uparrow">&#x2191;</button>
+        <button id="arrow" class="rightarrow">&#x2192;</button>
     </div>
-   </div> 
+    <div class="row six">
+        <button id="arrow" class="downarrow">&#x2193;</button>
+    </div>
+   </div>
 </body>
 </html>
